--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ pandas = "^2.2.2"
 scikit-learn = "^1.5.0"
 
 
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.4"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
