--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 pandas = "^2.2.2"
 scikit-learn = "^1.5.0"
+plotly = "^5.22.0"
+nbformat = "^5.10.4"
 
 
 [tool.poetry.group.dev.dependencies]
