--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pandas = "^2.2.2"
 scikit-learn = "^1.5.0"
 plotly = "^5.22.0"
 nbformat = "^5.10.4"
+matplotlib = "^3.9.0"
 
 
 [tool.poetry.group.dev.dependencies]
