--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ scikit-learn = "^1.5.0"
 plotly = "^5.22.0"
 nbformat = "^5.10.4"
 matplotlib = "^3.9.0"
+xgboost = "^2.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
